# sumo-traci-public-transport

./: CMakeLists.txt  README.md  TraCI-Wildau.cpp  TraCI-Wildau.sln  TraCI-Wildau.vcxproj  TraCI-Wildau.vcxproj.filters  traci.cfg.xml
example/: Auswertung TraCI.xlsx  Netzmodell2.net.xml  README.md  additional.add.xml  bus.rou.xml  flows_SUMOV2.2.rou.xml  loop_detect_1.out.xml  loop_detect_2.out.xml  output_Wildau.xml  output_configuration.sumocfg  traci.cfg.xml  trips.out.traci.xml  trips.out.xml
example/cadyts/: cadySumo-log.txt
example/dfRouter/: routes.rou.xml  vehicles.xml
example/duaRouter/: duarouter.rou.alt.xml  duarouter.rou.xml  duarouter.sumocfg  output_Wildau.xml
example/pedestrians and bicycles/: osm.bicycle.trips.xml  routes.rou.alt.xml  routes.rou.xml
example/public Transport_Busstops/: bus.rou.alt.xml
example/randomActivityGen/: activityGen.rou.alt.xml
example/randomTrips/: osm.passenger.rou.alt.xml  osm.passenger.rou.xml  trips.trips.xml
